# cmd/server/handlers/middlewares/middlewares.go
@@ -1,6 +1,7 @@
 package middlewares
 
 import (
+	"Leaderboard/cmd/server/handlers/middlewares/auth"
 	"Leaderboard/cmd/server/handlers/middlewares/log"
 	"Leaderboard/internal/client"
 	"Leaderboard/internal/config"
@@ -8,11 +9,13 @@ import (
 )
 
 type Middleware struct {
-	Log *log.Middleware
+	Log  *log.Middleware
+	Auth *auth.Middleware
 }
 
 func NewMiddleware(cfg *config.Config, clnts *client.Clients, svcs *services.Services) *Middleware {
 	return &Middleware{
-		Log: log.NewMiddleware(cfg, clnts, svcs),
+		Log:  log.NewMiddleware(cfg, clnts, svcs),
+		Auth: auth.NewMiddleware(cfg, clnts, svcs),
 	}
 }
